# cublas_simple

./: CMakeLists.txt  README.md  cublas_simple.cpp  utility.hpp
